<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
    android:id="@+id/mapSelectFrame"
android:layout_height="match_parent">


<org.osmdroid.views.MapView android:id="@+id/map"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/layoutBtnGroup"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="50dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnDeleteMarker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccentOrange"
            android:textColor="@color/colorBackground"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="Kein Standort">
        </Button>
        <Button
            android:id="@+id/btnSaveMarkerForList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBackground"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="Speichern">
        </Button>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_baseline_add_64"
        android:layout_centerVertical="true"/>

</RelativeLayout>