<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.fragments.ListEditFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="#FFFFFF">

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/titel_eingeben"
            android:inputType="text" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorDarkGray"
            android:text="@string/titel"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnSaveExistingList"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rounded_corners"
            android:src="@drawable/ic_baseline_save_24"
            android:tint="@color/colorBackground"
            android:contentDescription="@string/titel_anpassen" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/aufgaben"
        android:textSize="14sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveList"
        android:layout_width="54dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/speichern"
        android:focusable="true"
        android:src="@drawable/ic_baseline_save_24"
        android:tint="#FFFFFF"
        android:visibility="visible"
        app:backgroundTint="@color/colorAccentOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:maxImageSize="32dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="86dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_list"
        android:focusable="true"
        android:src="@drawable/share"
        android:tint="#FFFFFF"
        android:visibility="visible"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:maxImageSize="24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="140dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_list"
        android:focusable="true"
        android:src="@drawable/ic_notification"
        android:tint="#FFFFFF"
        android:visibility="visible"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:maxImageSize="24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNewTask"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/speichern"
        android:focusable="true"
        android:src="@drawable/add"
        android:tint="#FFFFFF"
        android:visibility="visible"
        app:backgroundTint="@color/colorAccentOrange"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:maxImageSize="32dp" />


</RelativeLayout>