<resources>
    <string name="app_name">GeoList</string>
    <string name="osm_karte">OSM Karte</string>
    <string name="nav_drawer_open">Open Menu</string>
    <string name="nav_drawer_close">Close Menu</string>
    <string name="listen">Listen und Aufgaben</string>
    <string name="nav_header_title">Menu</string>
    <string name="add_new_list">Add new List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speichern">Speichern</string>
    <string name="titel_eingeben">Titel eingeben</string>
    <string name="standort_speichern">Standort speichern</string>
    <string name="ausw_hlen">Auswählen</string>
    <string name="aufgaben">Aufgaben:</string>
    <string name="titel">Titel</string>
    <string name="titel_anpassen">Titel anpassen</string>
</resources>